<resources>
    <string name="app_name">our people everywhere v2.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">Settings</string>

    <string name="pref_file_key">pref_file_key</string>
    <string name="pref_is_user_login">is_user_login</string>
    <string name="pref_user_username">user_username</string>
    <string name="pref_user_email">user_email</string>
    <string name="pref_user_id">user_id</string>

    <string name="menu_home">Home</string>
    <string name="menu_convertor">Convertor</string>
    <string name="menu_alarm_numbers">Alarm numbers</string>
    <string name="log_in">Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_out">Log out</string>
    <string name="email">email</string>
    <string name="to">to</string>
    <string name="from">from</string>
    <string name="home">Home</string>
    <string name="unit_convertor">Unit Convertor</string>
    <string name="alarm_numbers">Alarm numbers</string>
    <string name="chose_language">Language</string>

    <string-array name="curencies">
        <item>USD</item>
        <item>UAH</item>
        <item>PLN</item>
        <item>EUR</item>

    </string-array>

    <string-array name="measuresOfLength">
        <item>millimeter</item>
        <item>centimeter</item>
        <item>meter</item>
        <item>kilometer</item>
        <item>inch</item>
        <item>foot</item>
        <item>yard</item>
        <item>mile</item>
    </string-array>

    <string-array name="measuresOfArea">
        <item>square centimeter</item>
        <item>square meter</item>
        <item>square kilometer</item>
        <item>square inch</item>
        <item>square foot</item>
        <item>square yard</item>
        <item>acre</item>
        <item>square mile</item>
    </string-array>

    <string-array name="measuresOfWeight">
        <item>gram</item>
        <item>kilogram</item>
        <item>tonne</item>
        <item>ounce</item>
        <item>pound</item>
    </string-array>
</resources>