<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.ti38b.ourpeopleeverywhere.viewModels.LogInViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logInUsernameField"
            android:hint="@string/username"
            android:text="@={viewModel.username}"/>

        <EditText
            android:id="@+id/logInPasswordField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:text="@={viewModel.password}"/>

        <Button
            android:id="@+id/logInActiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:onClick="@{(v)->viewModel.onLogInButtonClick(v)}"
            />

    </LinearLayout>

</layout>
